--- a/css/styles-original.css
+++ b/css/styles-original.css
@@ -133,7 +133,7 @@ body {
   height: 1px;
   margin: -1px;
   overflow: hidden;
-  padding: 0px;
+  padding: 0;
   position: absolute;
   white-space: nowrap;
   width: 1px;
@@ -143,7 +143,10 @@ body {
 .container {
   width: 1158px;
   margin: 0 auto;
-  padding: 0px 15px;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 0px;
+  padding-bottom: 0px;
 }
 
 .section-bottom {
@@ -196,8 +199,9 @@ body {
 
 /* <header */
 .header-container {
-  display: flex;
+  justify-content: space-between;
   align-items: center;
+  position: relative;
 }
 
 /* <nav */
@@ -266,12 +270,12 @@ body {
   color: var(--color-primary-brand-focus);
 }
 
-/* .nav-list-item:hover::after, */
+/* /* .nav-list-item:hover::after, */
 .current::after {
   content: "";
   position: absolute;
-  bottom: 0px;
-  left: 0px;
+  bottom: -24;
+  left: 0;
   width: 100%;
   height: 4px;
   background-color: var(--color-primary-brand);
@@ -429,7 +433,8 @@ body {
   text-align: center;
   background-color: var(--color-primary-background);
   border-radius: 0px 0px 4px 4px;
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 2px 1px rgba(46, 47, 66, 0.08);
   border-radius: 0px 0px 4px 4px;
 }
 
@@ -634,7 +639,7 @@ body {
 .portfolio-card-wrapper {
   border-top: none;
   border-bottom: 0.5px solid var(--color-light-mode-background);
-  color: var(--color-dark);
+  color: var(--title-color);
   padding: 32px 16px;
 }
 
@@ -726,7 +731,692 @@ body {
   left: 0;
   top: 0;
   position: absolute;
+  color: #ffffff; padding-top: 20px;
+  padding-bottom: 20px;
+  padding-left: 10px;
+  padding-right: 10px;
+  height: 100%;
+  width: 100%;
+  background-color: var(--color-primary-brand);
+  overflow: auto;
+  transform: translate(0, 100%);
+}
+
+.backdrop {
+position: fixed;
+top: 0;
+left: 0;
+z-index: 100;
+width: 100%;
+height: 100%;
+background-color: rgba(0, 0, 0, 0.2);
+}
+
+.modal {
+position: absolute;
+top: 50%;
+left: 50%;
+transform: translate(-50%, -50%);
+width: 408px;
+height: 576px;
+border-radius: 4px;
+/* background-color: rgb(255, 255, 255); */
+}
+
+.modal-close-btn {
+  position: absolute;
+  display: flex;
+  top: 24px;
+  right: 24px;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--color-accent);
+  width: 24px;
+  height: 24px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+}
+
+body {
+  background: var(--color-primary-background);
+  color: var(--color-body-text);
+  font-family: var(--font-primary);
+  font-size: var(--font-size-body);
+  font-weight: var(--font-weight-regular);
+  letter-spacing: var(--letter-spacing-primary);
+}
+
+/*-- COMMON CLASSES STYLES --*/
+/* HEADERS */
+.h1 {
   color: var(--color-primary-background);
+  font-size: var(--font-size-h1);
+  font-weight: var(--font-weight-bold);
+  line-height: var(--line-height-h1);
+}
+
+.h2 {
+  font-size: var(--font-size-h2);
+  font-weight: var(--font-weight-bold);
+}
+
+.h3 {
+  font-size: var(--font-size-h3);
+  font-weight: var(--font-weight-bold);
+  line-height: 1.2;
+  margin-bottom: 8px;
+  letter-spacing: 0.02em;
+}
+
+/* LINKS */
+.link {
+  color: var(--color-body-text);
+  font-weight: var(--font-weight-bold);
+  text-decoration: Underline;
+}
+
+/* LISTS */
+.list {
+  list-style: none;
+}
+
+/* HIDDEN */
+.visually-hidden {
+  border: 0;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
+
+/*-- POSITIONING --*/
+.container {
+  width: 1158px;
+  margin: 0 auto;
+  padding: 0px 15px;
+}
+
+.section-bottom {
+  padding-top: 96px;
+  padding-bottom: 120px;
+}
+
+.section-top {
+  padding-top: 120px;
+}
+
+/*-- LOGO --*/
+.logo {
+  color: var(--color-dark);
+  font-family: var(--font-logo);
+  font-size: var(--font-size-logo);
+  font-weight: var(--font-weight-logo);
+  letter-spacing: var(--line-spacing-logo);
+  line-height: var(--line-height-logo);
+  text-decoration: none;
+  text-transform: uppercase;
+  display: inlin-block;
+}
+
+.logo-accent {
+  color: var(--color-primary-brand);
+}
+
+.logo-header {
+  color: var(--color-dark);
+  margin-right: 76px;
+}
+
+.logo-footer {
+  color: var(--color-primary-background);
+  margin-right: 76px;
+}
+
+/* HOVER EFFECTS LOGO */
+.logo-accent:hover,
+.logo-accent:focus,
+.logo-accent:active {
+  color: var(--color-primary-brand-focus);
+}
+
+/* <header */
+.header-container {
+  display: flex;
+  align-items: center;
+}
+
+/* <nav */
+.nav-menu {
+  display: flex;
+  align-items: center;
+}
+
+/* <ul */
+.nav-list {
+  display: flex;
+  color: var(--color-dark);
+  font-weight: var(--font-weight-bold);
+  text-decoration: none;
+}
+
+/* <li */
+.nav-list-item {
+  position: relative;
+  margin: 0px 40px 0px 0px;
+}
+
+/* <a href= */
+/*.nav-link {} */
+
+/* <ul */
+.contacts-list {
+  display: flex;
+  margin-left: auto;
+  align-items: center;
+}
+
+/* <li */
+.contacts-list-item {
+  color: inherit;
+  text-decoration: none;
+  margin: 0px 40px 0px 0px;
+}
+
+/* <a href= */
+/* .nav-link, */
+/* .contacts-link {} */
+
+/* HOVER EFFECTS HEADER */
+/* <a href= */
+.current,
+.nav-link:hover,
+.nav-link:focus,
+.nav-link:active,
+.contacts-link:hover,
+.contacts-link:focus,
+.contacts-link:active {
+  color: var(--color-primary-brand);
+}
+
+/* <a href= */
+.current:hover,
+.current:focus,
+.current:active {
+  color: var(--color-primary-brand-focus);
+}
+
+/* /* .nav-list-item:hover::after, */
+.current::after {
+  content: "";
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
+  height: 4px;
+  background-color: var(--color-primary-brand);
+  border-radius: 2px;
+}
+
+/* HERO */
+/* <section */
+/* .hero-section {} */
+
+/* <div */
+.hero-container {
+  width: 1440px;
+  text-align: center;
+  background-color: var(--color-dark);
+  color: var(--color-primary-background);
+  /* overlay-via-gradient */
+  background-image: linear-gradient(#2e2f4270, #2e2f4270), url(../images/decor-img0-hero.jpg);
+  background-size: cover;
+  padding: 192px 0px;
+}
+
+/* <h1 */
+.hero-title {
+  color: var(--color-primary-background);
+  font-size: var(--font-size-h1);
+  font-weight: var(--font-weight-bold);
+  line-height: var(--line-height-h1);
+  margin: 0 auto;
+  margin-bottom: 48px;
+  max-width: 492px;
+}
+
+/* <button */
+.btn {
+  align-items: center;
+  border-radius: 4px;
+  cursor: pointer;
+  display: flex;
+  font-weight: var(--font-weight-bold);
+  height: 48px;
+  justify-content: center;
+  left: 93px;
+  letter-spacing: var(--letter-spacing-secondary);
+  line-height: var(--line-height-button);
+  padding: 12px 24px;
+  top: 0px;
+}
+
+/* <button */
+.hero-btn {
+  background-color: var(--color-primary-brand);
+  border-radius: 4px;
+  border: 1px solid var(--color-primary-brand);
+  color: var(--color-primary-background);
+  cursor: pointer;
+  letter-spacing: var(--letter-spacing-secondary);
+  line-height: var(--line-height-button);
+  padding: 16px 32px;
+  font-weight: var(--font-weight-bold);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+/* HOVER EFFECTS HERO */
+/* <button */
+.hero-btn:hover,
+.hero-btn:focus,
+.hero-btn:active {
+  background-color: var(--color-primary-brand-focus);
+  border: 1px solid var(--color-primary-brand-focus);
+}
+
+/* ADVENTAGES */
+/* <ul */
+.advantages-list {
+  display: flex;
+}
+
+/* <li */
+.advantages-list-item {
+  margin-right: 24px;
+  flex-basis: calc((100% - 72px) / 4);
+}
+
+/* <li */
+.advantages-list-item:last-child {
+  margin-right: 0px;
+}
+
+/* <div */
+.advantages-icon-wrapper {
+  margin-bottom: 8px;
+  height: 112px;
+  border-radius: 4px;
+  background-color: var(--color-light-mode-background);
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* <svg */
+.advantages-list-icon {
+  width: 64px;
+  height: 64px;
+}
+
+/* <p */
+.advantages-description {
+  line-height: 1.5;
+}
+
+/* SERVICES */
+/* <h2 */
+.services-title {
+  margin-bottom: 72px;
+  text-align: center;
+}
+
+/* ul */
+.services-list {
+  display: flex;
+}
+
+/* li */
+.services-list-item {
+  margin-right: 24px;
+}
+
+/* li */
+.services-list-item:last-child {
+  margin-right: 0px;
+}
+
+/* TEAM */
+/* <section */
+.team-section {
+  background-color: var(--color-light-mode-background);
+}
+
+/* <h2 */
+.team-title {
+  margin-bottom: 72px;
+  text-align: center;
+}
+/* ul */
+.team-list {
+  display: flex;
+}
+
+/* <li */
+.team-list-item {
+  flex-basis: calc((100% - 72px) / 4);
+  margin-right: 24px;
+  text-align: center;
+  background-color: var(--color-primary-background);
+  border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16),
+    0px 2px 1px rgba(46, 47, 66, 0.08);
+  border-radius: 0px 0px 4px 4px;
+}
+
+/* <li */
+.team-list-item:last-child {
+  margin-right: 0px;
+}
+
+/* div */
+.team-card-wrapper {
+  padding-top: 32px;
+  padding-bottom: 32px;
+  padding-left: 16px;
+  padding-right: 16px;
+}
+
+/* h3 */
+/* .team-name {} */
+
+/* <p */
+/* .team-postion {} */
+
+/* <ul */
+.team-social-list {
+  display: flex;
+	justify-content: center;
+  gap: 24px;
+  margin-top: 16px;
+}
+
+/* <li */
+.team-social-list-item {
+  max-width: 264px;
+  background-color: var(--color-primary-background);
+}
+
+/* <a href= */
+.team-social-list-link {
+  width: 40px;
+	height: 40px;
+	border-radius: 50%;
+  background-color: var(--color-primary-brand);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+/* <svg */
+.team-social-list-icon {
+  width: 16px;
+  height: 16px;
+  top: 12px;
+  left: 12px;
+  fill: var(--color-light-mode-background);
+}
+
+/* HOVER EFFECTS TEAM */
+/* <a href= */
+/* .team-list-item:hover .team-social-list-link {} */
+
+/* CUSTOMERS */
+/* <section  */
+.customers-section {
+  display: flex;
+}
+
+/* <div  */
+/* .customers-container {} */
+
+/* <h2  */
+.customers-title {
+  margin-bottom: 72px;
+  text-align: center;
+}
+
+/* <div  */
+/* .customers-icons-wrapper {} */
+
+/* <ul */
+.customers-list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+/* <li */
+.customers-list-item {
+  flex-basis: calc((100% - 120px) / 6);
+  margin-right: 24px;
+}
+
+/* <a href= */
+.customers-logo-link {
+  text-decoration: none;
+}
+
+/* <svg */
+.customers-logo-icon {
+  fill: var(--color-customers-logo);
+  height: 88px;
+  width: 168px;
+  box-sizing: border-box;
+  border: 1px solid var(--color-helper-text);
+  border-radius: 4px;
+  padding: 16px 32px 16px 32px;
+}
+
+/* HOVER EFFECTS CUSTOMERS */
+/* <a href= */
+.customers-logo-link:hover .customers-logo-icon,
+.customers-logo-link:focus .customers-logo-icon,
+.customers-logo-link:active .customers-logo-icon {
+  fill: var(--color-primary-brand);
+  border-color: var(--color-primary-brand);
+}
+
+/* FOOTER */
+/* <section */
+.footer {
+  background: var(--color-dark);
+  padding: 100px 0px;
+  display: flex;
+}
+
+/* <div */
+.footer-wrapper {
+  display: flex;
+}
+/* <div */
+.footer-slogan-wrapper {
+  margin-right: 120px;
+}
+
+/* <p */
+.footer-text {
+  width: 284px;
+  margin-top: 16px;
+  color: var(--color-primary-background);
+}
+
+/* <h2 */
+.footer-social-title {
+  font-size: var(--font-size-body);
+  font-weight: var(--font-weight-semi-bold);
+  line-height: var(--line-height-bold);
+  color: var(--color-light-mode-background);
+  text-align: left;
+}
+
+/* <div */
+/* .footer-social-wrappper {} */
+
+/* <ul */
+.footer-social-list {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+  margin-top: 16px;
+}
+
+/* <li */
+/* .footer-social-list-item {} */
+
+/* <a href= */
+.footer-social-list-link {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* <svg */
+.footer-social-list-icon {
+  width: 24px;
+  height: 24px;
+  top: 12px;
+  left: 12px;
+  fill: var(--color-light-mode-background);
+}
+
+/* HOVER EFFECTS FOOTER */
+/* <a href= */
+.footer-social-list-link:hover,
+.footer-social-list-link:focus,
+.footer-social-list-link:active {
+  background-color: var(--color-success);
+}
+
+/*-- PORTFOLIO --*/
+/* <a href= */
+.portfolio-card-link {
+  text-decoration: none;
+  color: var(--color-body-text);
+  display: block;
+}
+
+/* <div */
+.portfolio-card-wrapper {
+  border-top: none;
+  border-bottom: 0.5px solid var(--color-light-mode-background);
+  color: var(--title-color);
+  padding: 32px 16px;
+}
+
+/* <h3 */
+.portfolio-title {
+  margin-bottom: 8px;
+}
+
+/* <ul */
+.portfolio-btn-list {
+  display: flex;
+  margin: 0px 0px 72px 0px;
+  justify-content: center;
+}
+
+/* <ul */
+.portfolio-cards-list {
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  margin-right: -24px;
+  margin-bottom: -48px;
+}
+
+/* <li */
+.portfolio-cards-list-item {
+  border: 1px solid var(--color-accent);
+  margin-bottom: 48px;
+  margin-right: 24px;
+  width: 360px;
+}
+
+/* BUTTONS PORTFOLIO */
+.portfolio-btn {
+  background-color: var(--color-light-mode-background);
+  border: 1px solid var(--color-light-mode-background);
+  color: var(--color-primary-brand);
+  width: auto;
+  margin-right: 24px;
+}
+
+/* HOVER EFFECTS PORTFOLIO */
+/* <li */
+.portfolio-cards-list-item:hover,
+.portfolio-cards-list-item:focus {
+  border: 1px solid var(--color-light-mode-background);
+}
+
+/* <button */
+.decor-btn,
+.portfolio-btn:hover,
+.portfolio-btn:focus {
+  background-color: var(--color-primary-brand);
+  border: 1px solid var(--color-primary-brand);
+  color: var(--color-primary-brand);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  color: var(--color-primary-background);
+}
+
+/* <button */
+.decor-btn:hover,
+.decor-btn:focus {
+  background-color: var(--color-primary-brand);
+  border: 1px solid var(--color-primary-brand);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+/* <button */
+.decor-btn:active,
+.portfolio-btn:active {
+  background: var(--color-primary-brand-focus);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+.portfolio-overlay-wrapper {
+  position: relative;
+  overflow: hidden;
+}
+
+.portfolio-card-link:hover,
+.portfolio-card-link:focus {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
+}
+
+.portfolio-card-link:hover .overlay,
+.portfolio-card-link:focus .overlay {
+  transform: translate(0,0);
+}
+
+.overlay {
+  left: 0;
+  top: 0;
+  position: absolute;
+  color: #ffffff;
   padding-top: 40px;
   padding-bottom: 40px;
   padding-left: 32px;
@@ -764,7 +1454,7 @@ transform: translate(-50%, -50%);
 width: 408px;
 height: 576px;
 border-radius: 4px;
-background-color: var(--color-primary-background);
+background-color: rgb(255, 255, 255);
 }
 
 .modal-close-btn {
